objects/ssot__ComplaintCase__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplaintCase_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ComplaintCase_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ComplaintCase_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>ComplaintCase_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ComplaintId__c</fullName>
        <label>Complaint</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Complaint Case Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549032915_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ComplaintCase_ComplaintId_map_Compla_rel</label>
        <referenceTo>ssot__Complaint__dlm</referenceTo>
        <relationshipLabel>ComplaintCase_ComplaintId_map_Compla_rel</relationshipLabel>
        <relationshipName>rel_1718549032915_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>